fix z-index for editing stacked sections
moved z-index:9000; from .gp_editing to .gp_edit_current

--- a/include/css/inline_edit.css
+++ b/include/css/inline_edit.css
@@ -252,6 +252,7 @@ html{
 
 .gp_edit_current,
 .gp_edit_current:hover{
+	z-index:9000;
 	outline:1px solid #ccc !important;
 	}
 
